src/renderers/snapshots/scrut__renderers__pretty__tests__json_schema_failed_invalid_schema.snap
---
source: src/renderers/pretty.rs
expression: rendered
---
// =============================================================================
// @ the location:10
// -----------------------------------------------------------------------------
// # the title
// -----------------------------------------------------------------------------
// $ the command
// =============================================================================

JSON Schema validation failed: invalid schema

  - failed to parse schema: invalid YAML

actual output:
  {"foo": "bar"}


Result: 1 document(s) with 1 testcase(s): 0 succeeded, 1 failed and 0 skipped
