src/renderers/snapshots/scrut__renderers__pretty__tests__render_internal_error.snap
---
source: src/renderers/pretty.rs
expression: rendered
---
// =============================================================================
// @ Line 234
// -----------------------------------------------------------------------------
// # the title
// -----------------------------------------------------------------------------
// $ the command
// =============================================================================

error: something failed


Summary: 0 file(s) with 1 test(s): 0 succeeded, 1 failed and 0 skipped

