src/renderers/snapshots/scrut__renderers__pretty__tests__render_invalid_exit_code_absolute=false,location=false.snap
---
source: src/renderers/pretty.rs
expression: rendered
---
// =============================================================================
// @ Line 234
// -----------------------------------------------------------------------------
// # the title
// -----------------------------------------------------------------------------
// $ the command
// =============================================================================

unexpected exit code
  expected: 234
  actual:   123

## STDOUT
#> the stdout (no-eol)
## STDERR
#> the stderr (no-eol)


Result: 0 file(s) with 1 test(s): 0 succeeded, 1 failed and 0 skipped
