src/renderers/snapshots/scrut__renderers__pretty__tests__render_invalid_exit_code_absolute=false,location=true.snap
---
source: src/renderers/pretty.rs
expression: rendered
---
// =============================================================================
// @ path/location.md:234
// -----------------------------------------------------------------------------
// # the title
// -----------------------------------------------------------------------------
// $ the command
// =============================================================================

unexpected exit code
  expected: 234
  actual:   123

## STDOUT
#> the stdout (no-eol)
## STDERR
#> the stderr (no-eol)


Summary: 1 file(s) with 1 test(s): 0 succeeded, 1 failed and 0 skipped

