src/renderers/snapshots/scrut__renderers__pretty__tests__render_malformed_output_multiple_lines.snap
---
source: src/renderers/pretty.rs
expression: rendered
---
// =============================================================================
// @ Line 234
// -----------------------------------------------------------------------------
// # the title
// -----------------------------------------------------------------------------
// $ the command
// =============================================================================

1+ +  |   foo (+)
2  4  |   bar
3     | - baz


Result: 0 file(s) with 1 test(s): 0 succeeded, 1 failed and 0 skipped
