src/renderers/snapshots/scrut__renderers__pretty__tests__render_multiline.snap
---
source: src/renderers/pretty.rs
expression: rendered
---
// =============================================================================
// @ the location \
//   next line \
//   last line:234
// -----------------------------------------------------------------------------
// # the title \
//   next line \
//   last line
// -----------------------------------------------------------------------------
// $ the command \
//   next line \
//   last line
// =============================================================================

unexpected exit code
  expected: 234
  actual:   123

## STDOUT
#> the stdout (no-eol)
## STDERR
#> the stderr (no-eol)


Result: 1 document(s) with 1 testcase(s): 0 succeeded, 1 failed and 0 skipped
